// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomerInfoWrapper component should only 2 children and a Show More button because, the Show More button was clicked once, then all 4 children were rendered and the Less Info button was clicked 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 container ui-button-ghost-cef1 ui-button-primary-cef1 ui-button-small-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Show 
      more
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
    >
      expand_more
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render all 4 children and a Show Less button because the Show More button was clicked 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <p>
    c
  </p>
  <p>
    d
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 container ui-button-ghost-cef1 ui-button-primary-cef1 ui-button-small-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Show 
      less
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
    >
      expand_less
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and child b with the show more button because # of children is > 2 1`] = `
<div>
  <p>
    a
  </p>
  <p>
    b
  </p>
  <button
    aria-disabled="false"
    class="ui-button-wrapper-cef1 container ui-button-ghost-cef1 ui-button-primary-cef1 ui-button-small-cef1"
    type="button"
  >
    <span
      class="ui-button-content-cef1"
    >
      Show 
      more
    </span>
    <i
      aria-hidden="true"
      class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
    >
      expand_more
    </i>
  </button>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and no show more button because there is only one child 1`] = `
<div>
  <p>
    a
  </p>
</div>
`;

exports[`CustomerInfoWrapper component should render child a and no show more button because there is only one defined child 1`] = `
<div>
  <p>
    a
  </p>
</div>
`;
